# Compiladores

./: README.md
Lab01/: .gitignore  README.md  lexer.cpp  lexer.h  makefile
Lab02/Ast/: README.md  ast.cpp
Lab03/: CMakeLists.txt  README.md  ast.cpp  ast.h
Lab04/: CMakeLists.txt  README.md  lexer.l  makefile  parser.cpp  parser.h  test.txt  tokens.h
Lab05/: CMakeLists.txt  README.md  ast.cpp  ast.h  checker.cpp  gen.cpp  lexer.l  parser.cpp  parser.h  token.h  tokens.h  tradutor.cpp
Lab05/Testes/: teste1.cpp  teste2.cpp
